CTEs modularity comment

--- a/_lessons/102.html
+++ b/_lessons/102.html
@@ -67,7 +67,7 @@ class: subtitle, center, middle
 ## What does QA look like for analytics engineers?
 - Run automated tests on source data and on transformed data to ensure that SQL works as intended
 - Ensure source data is up to date
-- Ensure that other systems won't break from any changes you make
+- Ensure that other systems won't break from any changes you makes
 ---
 
 class: subtitle, center, middle
@@ -117,6 +117,7 @@ Real life examples:
 
 ???
 From the pre-work: how we split up our code into separate "cleaning" and "transforming" models
+Modularity happens at the macro and the micro: which tools we use all the way down to splitting code up into CTEs.
 
 ---
 class: subtitle, center, middle
