Small things I remember from LA

--- a/_lessons/207.html
+++ b/_lessons/207.html
@@ -188,7 +188,7 @@ with events as (
 
     select * from {{ref('events')}}
     
-    {% if is_incremental %}
+    {% if is_incremental() %}
     where event_timestamp >= (select max(session_start) from {{this}})
     {% endif %}
 
