Fix for MTL intro

--- a/_lessons/intro.html
+++ b/_lessons/intro.html
@@ -6,9 +6,9 @@ lesson: 000
 class: title, center, middle
 # Bienvenue à dbt Learn Montréal
 
-## Wifi: breather
+## Wifi: breather.com
 ## Password: peaceandquiet
-
+## (Power strips are coming at lunch!)
 ---
 
 # Introductions
