Green is not a creative color

--- a/_lessons/204.html
+++ b/_lessons/204.html
@@ -44,8 +44,8 @@ id,name,favorite_color,is_creative
 ### JSON
 
 ```json
-{"id": 1, "name": "Alice", "favorite_color": "green", "is_creative": true}
-{"id": 2, "name": "Barbara", "favorite_color": "blue", "is_creative": false}
+{"id": 1, "name": "Alice", "favorite_color": "green", "is_creative": false}
+{"id": 2, "name": "Barbara", "favorite_color": "blue", "is_creative": true}
 ```
 
 ---
