Rename presentations. Rework lessons homepage

--- a/_lessons/analytics-engineering-viewpoint.html
+++ b/_lessons/analytics-engineering-viewpoint.html
@@ -1,8 +1,8 @@
 ---
 layout: presentation
 title: The Analytics Engineering Viewpoint
-lesson: 102
 ---
+
 class: title, center, middle
 # The Analytics Engineering Viewpoint
 
@@ -109,7 +109,7 @@ Real life examples:
 
 - The modern data stack:
 .center[
-<img src="/lessons/img/101/modern-data-stack.svg" style="width: 80%;">
+<img src="/ui/img{{page.id}}/modern-data-stack.svg" style="width: 80%;">
 ]
 - Within a dbt project:
     - Using packages (more on this later)
@@ -178,4 +178,4 @@ class: subtitle
 * Analytics should use environments
 * Analytics workflows should be automated
 
-{% include options/next-presentation.html %}
+
