--- a/_lessons/big-data-tech.html
+++ b/_lessons/big-data-tech.html
@@ -1,7 +1,6 @@
 ---
 layout: presentation
 title: Big Data Technologies
-lesson: 206
 ---
 
 class: title, center, middle
@@ -164,7 +163,7 @@ What if you want it _now_?
 
 # What if you have petabytes of data?
 
-<img src="/lessons/img/{{page.lesson}}/jt-billion-rows.png" class="img-center">
+<img src="/ui/img{{page.id}}/jt-billion-rows.png" class="img-center">
 
 ---
 
@@ -204,4 +203,4 @@ Oy. A lot of our friendly abstractions + assumptions are out the window...
 class: subtitle, middle, center
 # Speaking of modeling paradigms...
 
-{% include options/next-presentation.html %}
+
