--- a/_lessons/data-warehouse-performance.html
+++ b/_lessons/data-warehouse-performance.html
@@ -1,7 +1,6 @@
 ---
 layout: presentation
 title: Data Warehouse Performance
-lesson: 205
 ---
 
 class: title, center, middle
@@ -112,7 +111,7 @@ Why else?
 
 Parallel processing = faster processing!
 
-<img src="/lessons/img/{{page.lesson}}/redshift-nodes.png" class="img-center">
+<img src="/ui/img{{page.id}}/redshift-nodes.png" class="img-center">
 
 ???
 BigQuery runs _every_ query with _thousands_ of worker nodes
@@ -123,14 +122,14 @@ BigQuery runs _every_ query with _thousands_ of worker nodes
 
 .left-column[
 ### In the world
-<img src="/lessons/img/{{page.lesson}}/amd-vc.png" class="img-center">
+<img src="/ui/img{{page.id}}/amd-vc.png" class="img-center">
 &nbsp;
-<img src="/lessons/img/{{page.lesson}}/nvidia-gpu.png" class="img-center">
+<img src="/ui/img{{page.id}}/nvidia-gpu.png" class="img-center">
 ]
 
 .right-column[
 ### In Snowflake
-<img src="/lessons/img/{{page.lesson}}/snowflake-scaling.png" class="img-center">
+<img src="/ui/img{{page.id}}/snowflake-scaling.png" class="img-center">
 ]
 
 ---
@@ -200,7 +199,7 @@ class: subtitle, center, middle
 ## My favorite place :)
 
 .left-column-66[
-<img src="/lessons/img/{{page.lesson}}/library.png" class="img-center">
+<img src="/ui/img{{page.id}}/library.png" class="img-center">
 ]
 
 --
@@ -345,7 +344,7 @@ micropartitions need to be scanned to return the results of my query?
 
 ---
 
-<img src="/lessons/img/{{page.lesson}}/snowflake-pruned-query.png" class="img-center">
+<img src="/ui/img{{page.id}}/snowflake-pruned-query.png" class="img-center">
 
 ---
 
@@ -415,4 +414,4 @@ class: subtitle, middle, center
 # Just those three?
 # Wait and see...
 
-{% include options/next-presentation.html %}
+
