--- a/_lessons/debugging-dbt.html
+++ b/_lessons/debugging-dbt.html
@@ -1,7 +1,6 @@
 ---
 layout: presentation
 title: Debugging dbt
-lesson: 108
 estimated_teaching_time: 15
 teaching_method: live demo + slides. Questions encouraged.
 working_session: true
@@ -216,13 +215,13 @@ Every last line of it.
 
 # Next step: to the logs!
 
-<img src="/lessons/img/{{page.lesson}}/logs-1.png" style="width: 50%;" class="img-center">
+<img src="/ui/img{{page.id}}/logs-1.png" style="width: 50%;" class="img-center">
 
 .left-column[
-<img src="/lessons/img/{{page.lesson}}/logs-2.jpg" style="width:70%;" class="img-center">
+<img src="/ui/img{{page.id}}/logs-2.jpg" style="width:70%;" class="img-center">
 ]
 .right-column[
-<img src="/lessons/img/{{page.lesson}}/logs-3.jpg" style="width:70%;" class="img-center">
+<img src="/ui/img{{page.id}}/logs-3.jpg" style="width:70%;" class="img-center">
 ]
 ---
 
@@ -319,4 +318,4 @@ class: subtitle
     * Use a bad `ref`
 * Fix things 😌
 
-{% include options/next-presentation.html %}
+
