--- a/_lessons/docs.html
+++ b/_lessons/docs.html
@@ -1,7 +1,6 @@
 ---
 layout: presentation
 title: Docs
-lesson: 107
 estimated_teaching_time: 30
 teaching_method: live demo + slides. Questions encouraged.
 working_session: true
@@ -121,7 +120,7 @@ dbt docs serve
 ```
 
 ## dbt Cloud
-<img src="/lessons/img/{{page.lesson}}/job-config-gen-docs.png" style="width: 90%; float: left;">
+<img src="/ui/img{{page.id}}/job-config-gen-docs.png" style="width: 90%; float: left;">
 
 ---
 
@@ -155,4 +154,4 @@ class: subtitle
   [Related dbt documentation](https://docs.getdbt.com/docs/documentation)
 ]
 
-{% include options/next-presentation.html %}
+
