--- a/_lessons/intro-data-warehouses.html
+++ b/_lessons/intro-data-warehouses.html
@@ -1,7 +1,6 @@
 ---
 layout: presentation
 title: Intro to Data Warehouses
-lesson: 204
 ---
 
 class: title, center, middle
@@ -14,7 +13,7 @@ class: title, center, middle
 
 --
 
-<img src="/lessons/img/{{page.lesson}}/galaxy.png" style="width: 60%;" class="img-center">
+<img src="/ui/img{{page.id}}/galaxy.png" style="width: 60%;" class="img-center">
 
 ---
 
@@ -80,7 +79,7 @@ id,name,favorite_color,is_creative
 ]
 
 .right-column[
-<img src="/lessons/img/{{page.lesson}}/butterfly.png" class="img-center">
+<img src="/ui/img{{page.id}}/butterfly.png" class="img-center">
 ]
 
 ---
@@ -111,7 +110,7 @@ from products
 where trending = true
 ```
 
-<img src="/lessons/img/{{page.lesson}}/superstore.png" style="width: 100%;">
+<img src="/ui/img{{page.id}}/superstore.png" style="width: 100%;">
 ]
 
 ---
@@ -176,7 +175,7 @@ Analytic(al) Database, a.k.a.:
 - Power your application with a transactional database
 - Analyze data with an analytical database
 
-<img src="/lessons/img/{{page.lesson}}/stack.png" style="width: 90%;">
+<img src="/ui/img{{page.id}}/stack.png" style="width: 90%;">
 
 ---
 
@@ -200,4 +199,4 @@ Analytic(al) Database, a.k.a.:
 class: subtitle, middle, center
 # Lunch!
 
-{% include options/next-presentation.html %}
+
