--- a/_lessons/jinja.html
+++ b/_lessons/jinja.html
@@ -1,7 +1,6 @@
 ---
 layout: presentation
 title: Jinja
-lesson: 202
 ---
 
 class: title, center, middle
@@ -175,7 +174,7 @@ Today I want strawberry ice cream!
 _Aren't we going to be writing SQL???_
 
 {% endraw %}
-<img src="/lessons/img/{{page.lesson}}/hn-loops.png" style="width: 100%;">
+<img src="/ui/img{{page.id}}/hn-loops.png" style="width: 100%;">
 {% raw %}
 
 --
@@ -354,4 +353,4 @@ good.ok.
 class: subtitle, middle, center
 # Let's get templating!
 
-{% include options/next-presentation.html %}
+
