--- a/_lessons/polish-project.html
+++ b/_lessons/polish-project.html
@@ -1,7 +1,6 @@
 ---
 layout: presentation
 title: Polish your dbt project
-lesson: 201
 estimated_teaching_time: 45
 estimated_working_session: 0
 teaching_method: 15 minutes for recap at start. 30 minutes of one-sided lecture
@@ -158,7 +157,7 @@ A README can help answer:
 Note: many of these are links to our start project script, so include extra jinja
 ---
 .center[
-<img src="/lessons/img/{{page.lesson}}/example-readme.png" style="width: 80%;">
+<img src="/ui/img{{page.id}}/example-readme.png" style="width: 80%;">
 ]
 
 .caption[
@@ -171,7 +170,7 @@ PR templates help you write better PRs (and are great tools for reviewers!)
 * Checklists are also useful
 ---
 .center[
-<img src="/lessons/img/{{page.lesson}}/example-pr-template.png" style="width: 80%;">
+<img src="/ui/img{{page.id}}/example-pr-template.png" style="width: 80%;">
 ]
 
 .caption[
@@ -185,7 +184,7 @@ class: subtitle
 * Improve your README
 * Add a PR template (name it `.github/pull_request_template.md`)
 
-{% include options/next-presentation.html %}
+
 
 ???
 Only do this exercise if time permits
