--- a/_lessons/slack-case-study.html
+++ b/_lessons/slack-case-study.html
@@ -1,7 +1,6 @@
 ---
 layout: presentation
 title: End to end case study
-lesson: 208
 ---
 class: title, center, middle
 # Designing a data model
@@ -118,7 +117,7 @@ Lots of tinkering at this point, helps you understand your data sources
 
 ---
 .center[
-<img src="/lessons/img/{{page.lesson}}/exploratory-data-analysis.jpeg" style="width: 35%;">
+<img src="/ui/img{{page.id}}/exploratory-data-analysis.jpeg" style="width: 35%;">
 ]
 
 .caption[
@@ -165,7 +164,7 @@ This is where the repo is at. Demonstrate some the cleaning up that has happened
 # V0 Chart:
 ## Posts in each channel each week
 .center[
-<img src="/lessons/img/{{page.lesson}}/bad-looker-chart.png"style="width: 60%;">
+<img src="/ui/img{{page.id}}/bad-looker-chart.png"style="width: 60%;">
 ]
 
 ???
@@ -203,7 +202,7 @@ class: subtitle
 background-color: #005E7A
 class: middle
 
-<img src="/lessons/img/{{page.lesson}}/final-dag.png" style="width: 100%;">
+<img src="/ui/img{{page.id}}/final-dag.png" style="width: 100%;">
 
 ???
 This is what it ended up as! A ton more complicated!
@@ -228,4 +227,4 @@ class: subtitle
 2. Exploratory model building
 3. Refactor
 
-{% include options/next-presentation.html %}
+
