--- a/_lessons/sources.html
+++ b/_lessons/sources.html
@@ -1,7 +1,6 @@
 ---
 layout: presentation
 title: Sources
-lesson: 106
 estimated_teaching_time: 30
 teaching_method: live demo + slides. Questions encouraged.
 working_session: true
@@ -107,7 +106,7 @@ renamed as (
 
 # Sources are green...
 
-<img src="/lessons/img/{{page.lesson}}/dag-source.png" class="img-center">
+<img src="/ui/img{{page.id}}/dag-source.png" class="img-center">
 
 ---
 
@@ -119,7 +118,7 @@ renamed as (
 ```bash
 dbt source snapshot-freshness
 ```
-<img src="/lessons/img/{{page.lesson}}/freshness-viz.png" style="width: 100%;" class="img-center">
+<img src="/ui/img{{page.id}}/freshness-viz.png" style="width: 100%;" class="img-center">
 ]
 
 ---
@@ -162,4 +161,4 @@ class: subtitle
   [Related dbt documentation](https://docs.getdbt.com/docs/using-sources)
 ]
 
-{% include options/next-presentation.html %}
+
