--- a/_lessons/testing-ci.html
+++ b/_lessons/testing-ci.html
@@ -1,7 +1,6 @@
 ---
 layout: presentation
 title: Testing & CI
-lesson: 105
 estimated_teaching_time: 30
 teaching_method: live demo + slides. Questions encouraged.
 working_session: true
@@ -217,7 +216,7 @@ Your automated runs should:
 
 We use the scheduler in [dbt Cloud](cloud.getdbt.com) to run dbt in production.
 ---
-<img src="/lessons/img/{{page.lesson}}/dbt-cloud.png" style="width: 100%;">
+<img src="/ui/img{{page.id}}/dbt-cloud.png" style="width: 100%;">
 
 
 ---
@@ -231,4 +230,4 @@ class: subtitle
   [Related dbt documentation](https://docs.getdbt.com/docs/testing#section-schema-tests)
 ]
 
-{% include options/next-presentation.html %}
+
