--- a/_lessons/who-is-analytics-engineer.html
+++ b/_lessons/who-is-analytics-engineer.html
@@ -1,7 +1,6 @@
 ---
 layout: presentation
 title: Who is an analytics engineer?
-lesson: 101
 ---
 
 class: title, center, middle
@@ -29,7 +28,7 @@ class: title, center, middle
 ---
 # Modern data stack
 
-<img src="/lessons/img/{{page.lesson}}/premodern-data-stack.svg" class="img-center">
+<img src="/ui/img{{page.id}}/premodern-data-stack.svg" class="img-center">
 
 ???
 - MPP warehouses replaced the need for engineers to maintain warehouse infrastructures
@@ -60,7 +59,7 @@ audience: Share your story of the silliest data problem you've had
 ---
 # Enter: dbt
 
-<img src="/lessons/img/{{page.lesson}}/modern-data-stack.svg" style="width: 100%;">
+<img src="/ui/img{{page.id}}/modern-data-stack.svg" style="width: 100%;">
 
 
 ???
@@ -75,7 +74,7 @@ audience: Share your story of the silliest data problem you've had
 
 ## dbt & Analytics Engineering
 
-<img src="/lessons/img/{{page.lesson}}/role-comparison.png" style="width: 100%;">
+<img src="/ui/img{{page.id}}/role-comparison.png" style="width: 100%;">
 
 
 ???
@@ -90,4 +89,4 @@ class: subtitle
 
 ## - Learn from each other
 
-{% include options/next-presentation.html %}
+
