--- a/_lessons/pull-requests.html
+++ b/_lessons/pull-requests.html
@@ -1,7 +1,6 @@
 ---
 layout: presentation
 title: Pull Requests
-lesson: 109
 estimated_teaching_time: 15
 teaching_method: live demo + slides. Questions encouraged.
 working_session: true
@@ -37,16 +36,16 @@ class: title, center, middle
 
 .left-column-33[
 ### Description
-<img src="/lessons/img/{{page.lesson}}/pr-1.png" style="width: 100%;" class="img-center">
+<img src="/ui/img{{page.id}}/pr-1.png" style="width: 100%;" class="img-center">
 ]
 .right-column-66[
 .left-column[
 ### CI
-<img src="/lessons/img/{{page.lesson}}/pr-2.png" class="img-center">
+<img src="/ui/img{{page.id}}/pr-2.png" class="img-center">
 ]
 .right-column[
 ### Review
-<img src="/lessons/img/{{page.lesson}}/pr-3.png" class="img-center">
+<img src="/ui/img{{page.id}}/pr-3.png" class="img-center">
 ]
 ]
 
