Use _data. Add back next-preso logo links

--- a/_lessons/big-data-tech.html
+++ b/_lessons/big-data-tech.html
@@ -203,4 +203,4 @@ Oy. A lot of our friendly abstractions + assumptions are out the window...
 class: subtitle, middle, center
 # Speaking of modeling paradigms...
 
-
+{% include options/next_presentation.html %}
