--- a/_lessons/dbt-fundamentals.html
+++ b/_lessons/dbt-fundamentals.html
@@ -392,7 +392,7 @@ select * from raw.stripe.payment
 2. Add a new field to the `customers` model:
     * `customers.lifetime_value`: the total amount a customer has spent at `jaffle_shop`
 
-
+{% include options/next_presentation.html %}
 
 ???
 Discussion points (leading questions for the next session)
