--- a/_lessons/docs.html
+++ b/_lessons/docs.html
@@ -154,4 +154,4 @@ class: subtitle
   [Related dbt documentation](https://docs.getdbt.com/docs/documentation)
 ]
 
-
+{% include options/next_presentation.html %}
