--- a/_lessons/materializations-incremental.html
+++ b/_lessons/materializations-incremental.html
@@ -403,4 +403,4 @@ the database) that is **necessarily a trade-off**.
 class: subtitle, middle, center
 ### Made it :)
 
-
+{% include options/next_presentation.html %}
