--- a/_lessons/modeling-project-design.html
+++ b/_lessons/modeling-project-design.html
@@ -512,4 +512,4 @@ Refactor your project to be consistent with how we (Fishtown) structure our dbt 
 ## Bonus:
 Try using the [schema](https://docs.getdbt.com/docs/using-custom-schemas#section-what-is-a-custom-schema) configuration to split your models across multiple schemas
 
-
+{% include options/next_presentation.html %}
