--- a/_lessons/packages.html
+++ b/_lessons/packages.html
@@ -170,4 +170,4 @@ class: subtitle
 ## Overriding the dbt global project
 * Override the uniqueness test ([here](https://github.com/fishtown-analytics/dbt/blob/dev/octavius-catto/core/dbt/include/global_project/macros/schema_tests/unique.sql)) to use a CTE rather than a subquery.
 
-
+{% include options/next_presentation.html %}
