--- a/_lessons/polish-project.html
+++ b/_lessons/polish-project.html
@@ -184,7 +184,7 @@ class: subtitle
 * Improve your README
 * Add a PR template (name it `.github/pull_request_template.md`)
 
-
+{% include options/next_presentation.html %}
 
 ???
 Only do this exercise if time permits
