--- a/_lessons/pull-requests.html
+++ b/_lessons/pull-requests.html
@@ -113,5 +113,8 @@ class: subtitle
 * [108 Debugging dbt](/lessons/108#working-session): Break things and fix them
 
 When you're ready, open a PR and tag a classmate to review it!
+
+{% include options/next_presentation.html %}
+
 ???
 Open a pull request, and tag a classmate to review it!
