--- a/_lessons/sources.html
+++ b/_lessons/sources.html
@@ -161,4 +161,4 @@ class: subtitle
   [Related dbt documentation](https://docs.getdbt.com/docs/using-sources)
 ]
 
-
+{% include options/next_presentation.html %}
