--- a/_lessons/techniques-trade.html
+++ b/_lessons/techniques-trade.html
@@ -695,5 +695,6 @@ They can get tricky to handle in the BI layer:
 class: subtitle, center, middle
 # Fin!
 
-
 {% endraw %}
+
+{% include options/next_presentation.html %}
