--- a/_lessons/testing-ci.html
+++ b/_lessons/testing-ci.html
@@ -230,4 +230,4 @@ class: subtitle
   [Related dbt documentation](https://docs.getdbt.com/docs/testing#section-schema-tests)
 ]
 
-
+{% include options/next_presentation.html %}
