--- a/_content/index.html
+++ b/_content/index.html
@@ -76,7 +76,7 @@ canvas {
 					<div class="text-contain">
 						<h3 id="about" class="h2">About dbt Learn</h3>
 						<p>
-                            <a href="https://blog.getdbt.com/what-is-an-analytics-engineer/">Analytics engineering</a> is the data transformation work that happens between loading data 
+                            <a href="https://blog.getdbt.com/what-is-an-analytics-engineer/">Analytics engineering</a> is the data transformation work that happens between loading data
                             into your warehouse and analyzing it. At dbt Learn, the Fishtown Analytics team will teach analysts how to use dbt to manage that workflow.
                             Attendees will learn about:
                         </p>
@@ -255,13 +255,15 @@ canvas {
                             <h5>Is there a free online version?</h5>
                                 <p> We're really interested in making this happen! It's still a ways away.
                                 In the meantime, we're dedicated to making in-person Learn the best it can possibly be.</p>
+                            <h5> Who should attend dbt Learn?</h5>
+                                <p> If the following statements are true for you, then dbt Learnn will be a good fit for you: I'm using incremental models, my dbt project doesn't have tests, my dbt project doesn't have snapshots, I am unsure how to debug errors, I want to be dbt certified.</p>
                             <h5>Is it possible to see a course syllabus ahead of time?</h5>
-                                <p> We are constantly updating and improving on dbt Learn! We provide registered students with a detailed 
+                                <p> We are constantly updating and improving on dbt Learn! We provide registered students with a detailed
                                     agenda a few weeks before each session. You can see <a href="#agenda">above</a> some topic areas we always cover.</p>
                             <h5>The cost of the event is prohibitive for me, is there any flexibility on the price?</h5>
-                                <p> We want dbt to be as accessible to as many people as possible. If you work for a non-profit, 
-                                    the public sector, or are member of a community that is historically underrepresented in 
-                                    tech – send us a message at <a href="mailto:learn@getdbt.com">learn@getdbt.com</a>. We would love to talk about what it will 
+                                <p> We want dbt to be as accessible to as many people as possible. If you work for a non-profit,
+                                    the public sector, or are member of a community that is historically underrepresented in
+                                    tech – send us a message at <a href="mailto:learn@getdbt.com">learn@getdbt.com</a>. We would love to talk about what it will
                                     take to get you to the event.</p>
                     </div>
                 </div>
