--- a/_content/index.html
+++ b/_content/index.html
@@ -256,7 +256,7 @@ canvas {
                                 <p> We're really interested in making this happen! It's still a ways away.
                                 In the meantime, we're dedicated to making in-person Learn the best it can possibly be.</p>
                             <h5> Who should attend dbt Learn?</h5>
-                                <p> If the following statements are true for you, then dbt Learnn will likely be a good fit:
+                                <p> If the following statements are true for you, then dbt Learn will likely be a good fit:
                                     <ul>
                                         <li>I'm using incremental models</li>
                                         <li>My dbt project doesn't have tests</li>
