--- a/_content/index.html
+++ b/_content/index.html
@@ -256,13 +256,13 @@ canvas {
                                 <p> We're really interested in making this happen! It's still a ways away.
                                 In the meantime, we're dedicated to making in-person Learn the best it can possibly be.</p>
                             <h5> Who should attend dbt Learn?</h5>
-                                <p> If the following statements are true for you, then dbt Learn will likely be a good fit:
+                                <p> If some of the following statements are true for you, then dbt Learn will likely be a good fit:
                                     <ul>
-                                        <li>I'm using incremental models</li>
-                                        <li>My dbt project doesn't have tests</li>
-                                        <li>My dbt project doesn't use snapshots</li>
-                                        <li>I am unsure how to debug errors</li>
-                                        <li>I want to be dbt certified</li>
+                                        <li>I'm using incremental models.</li>
+                                        <li>My dbt project doesn't have tests.</li>
+                                        <li>My dbt project doesn't use snapshots.</li>
+                                        <li>I am unsure how to debug errors.</li>
+                                        <li>I want to be dbt certified.</li>
                                       </ul></p>
                             <h5>Is it possible to see a course syllabus ahead of time?</h5>
                                 <p> We are constantly updating and improving on dbt Learn! We provide registered students with a detailed
