--- a/_content/index.html
+++ b/_content/index.html
@@ -258,9 +258,9 @@ canvas {
                             <h5> Who should attend dbt Learn?</h5>
                                 <p> If some of the following statements are true for you, then dbt Learn will likely be a good fit:
                                     <ul>
-                                        <li>I'm using incremental models.</li>
+                                        <li>I'm thinking about building models incrementally.</li>
                                         <li>My dbt project doesn't have tests.</li>
-                                        <li>My dbt project doesn't use snapshots.</li>
+                                        <li>I'm interested in learning about the latest workflows and tools in analytics.</li>
                                         <li>I am unsure how to debug errors.</li>
                                         <li>I want to be dbt certified.</li>
                                       </ul></p>
