Tidy up packages + knowledge checks

--- a/_lessons/dbtonic-jinja.html
+++ b/_lessons/dbtonic-jinja.html
@@ -206,8 +206,13 @@ Macros introduce tradeoffs:
 * Macro filenames that match macro names
 * Leveraging package macros where possible
 ---
-class: subtitle, middle, center
-# Questions?
+class: subtitle
+# Knowledge check
+You should be able to:
+* Write Jinja to solve our example problem
+* Have a rough idea of when to use the Jinja docs vs. when to use the dbt docs
+* Know where to get started to write own macro
+
 {% endraw %}
 
 
