updated dbt certfication language

--- a/_content/index.html
+++ b/_content/index.html
@@ -262,7 +262,7 @@ canvas {
                                         <li>My dbt project doesn't have tests.</li>
                                         <li>I'm interested in learning about the latest workflows and tools in analytics.</li>
                                         <li>I am unsure how to debug errors.</li>
-                                        <li>I want to be dbt certified.</li>
+                                        <li>I want the official dbt training.</li>
                                       </ul></p>
                             <h5>Is it possible to see a course syllabus ahead of time?</h5>
                                 <p> We are constantly updating and improving on dbt Learn! We provide registered students with a detailed
