Add some guidance

--- a/_lessons/group-case-study.html
+++ b/_lessons/group-case-study.html
@@ -29,6 +29,23 @@ select * from raw.learn_stripe.refunds;
 
 ---
 
+# My typical process
+1. **What am I trying to build?**
+    - Draw a dashboard or the table of data
+    - Identify the grain
+2. **What data sources do I have? How do they join together?**
+    - Add sources
+    - State assumptions (as tests)
+3. **Create V1**
+    - Write a query that works
+    - Jot down to-dos
+4. **Refactor**
+    - Make my code align with best practices
+5. **Create a PR**
+    - Send it to someone to review!
+
+---
+
 # Over to you!
 
 Take what you've learned in this course and start working on this issue!
