Make text dense

--- a/_lessons/group-case-study.html
+++ b/_lessons/group-case-study.html
@@ -30,6 +30,7 @@ select * from raw.learn_stripe.refunds;
 ---
 
 # My typical process
+.dense-text[
 1. **What am I trying to build?**
     - Draw a dashboard or the table of data
     - Identify the grain
@@ -43,7 +44,7 @@ select * from raw.learn_stripe.refunds;
     - Make my code align with best practices
 5. **Create a PR**
     - Send it to someone to review!
-
+]
 ---
 
 # Over to you!
